--- a/src/templates/tinkWrapper.html
+++ b/src/templates/tinkWrapper.html
@@ -6,7 +6,7 @@
             </a>
         </span>
         <fr-transclude></fr-transclude>
-    <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line. Tip: use <code>.help-block</code>.</span>
+    <span class="help-block">{{field.spec.extraOptions.extraInfo}}</span>
  </div>
 <div fr-messages="field.validation.error"></div>
 <small data-ng-show="field.to.shortDescription.length > 0 && field.state.editMode" data-ng-bind="field.to.shortDescription"></small>
