--- a/src/templates/options/tinkText.html
+++ b/src/templates/options/tinkText.html
@@ -20,7 +20,7 @@
     </div>
     <!--<h5>Requied</h5>-->
     <div class="checkbox">
-        <input ng-change="rerender()"  ng-model-options="{ updateOn: 'blur' }" ng-model="field.shortDescription" type="checkbox" id="Required" name="Required" value="" checked="">
+        <input ng-change="rerender()"  ng-model-options="{ updateOn: 'blur' }" ng-model="field.required" type="checkbox" id="Required" name="Required" value="" checked="">
         <label for="Required">Required</label>
     </div>
     <!--<h5>Requied</h5>-->
