--- a/src/templates/options/tinkText.html
+++ b/src/templates/options/tinkText.html
@@ -1,7 +1,7 @@
     <!--<h5>Question</h5>-->
     <div class="form-group">
         <label for="question">Question</label>
-        <textarea ng-change="rerender()"  ng-model-options="{ updateOn: 'blur' }"  id="question" ng-model="field.label" placeholder="question" rows="2"></textarea>
+        <textarea ng-change="rerender()" required ng-model-options="{ updateOn: 'blur' }"  id="question" ng-model="field.label" placeholder="question" rows="2"></textarea>
     </div>
     <!--<h5>Placeholder</h5>-->
     <div class="form-group">
@@ -11,7 +11,7 @@
     <!--<h5>Description</h5>-->
     <div class="form-group">
         <label for="description">Description</label>
-        <textarea ng-change="rerender()"  ng-model-options="{ updateOn: 'blur' }"  ng-model="field.shortDescription" id="description" placeholder="description" rows="2"></textarea>
+        <textarea ng-change="rerender()" ng-model-options="{ updateOn: 'blur' }"  ng-model="field.shortDescription" id="description" placeholder="description" rows="2"></textarea>
     </div>
     <!--<h5>Extra info</h5>-->
     <div class="form-group">
